fix dark mode color issues

--- a/src/styles/global/mixin.less
+++ b/src/styles/global/mixin.less
@@ -1,12 +1,12 @@
 // Box Shadow
-.box-shadow(@shadow...) {
+.box-shadow(@shadow) {
   -webkit-box-shadow: @shadow;
   -moz-box-shadow: @shadow;
   box-shadow: @shadow;
 }
 
 // Single side border-radius
-.border-radius(@radius...) {
+.border-radius(@radius) {
   -webkit-border-radius: @radius;
   -moz-border-radius: @radius;
   border-radius: @radius;
